app/tests/fails/build_enum.stderr
error: only structs with named fields are supported. Struct: ExampleEnum
 --> tests/fails/build_enum.rs:4:1
  |
4 | pub enum ExampleEnum {}
  | ^^^^^^^^^^^^^^^^^^^^^^^
